--- a/index.html
+++ b/index.html
@@ -226,6 +226,6 @@
       </div>
     </section>
   </template>
-  <script src="function.js"></script>
+  <script src="main.js"></script>
 </body>
 </html>
