--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
       </div>
     </section>
   </template>
-  <script src="main.js" type="module"></script>
-  <script src="functions.js"></script>
+  <script src="js/thumbnail.js"></script>
+  <script src="js/main.js" type="module"></script>
 </body>
 </html>
