--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <link rel="stylesheet" href="css/normalize.css">
+  <link href="./vendor/nouislider/nouislider.css" rel="stylesheet">
   <link rel="stylesheet" href="css/style.css">
   <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
   <title>Кекстаграм</title>
@@ -226,7 +227,7 @@
       </div>
     </section>
   </template>
-  <script src="./vendor/nouislider/nouislider.css"></script>
+  <script src="./vendor/nouislider/nouislider.js"></script>
   <script src="./vendor/pristine/pristine.min.js"></script>
   <script src="./js/main.js" type="module"></script>
 </body>
