--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <main>
 
     <!-- Фильтрация изображений от других пользователей -->
-    <section class="img-filters  img-filters--inactive  container">
+    <section class="img-filters  img-filters  container">
       <h2 class="img-filters__title  visually-hidden">Фильтр фотографий</h2>
       <form class="img-filters__form" action="index.html" method="get" autocomplete="off">
         <button type=button class="img-filters__button  img-filters__button--active" id="filter-default">По умолчанию</button>
@@ -31,7 +31,7 @@
       <section class="img-upload">
         <div class="img-upload__wrapper">
           <h2 class="img-upload__title  visually-hidden">Загрузка фотографии</h2>
-          <form class="img-upload__form" id="upload-select-image" method="post" enctype="multipart/form-data" action="https://29.javascript.htmlacademy.pro/kekstagram" autocomplete="off">
+          <form class="img-upload__form" id="upload-select-image" method="post" enctype="multipart/form-data" autocomplete="off">
 
             <!-- Изначальное состояние поля для загрузки изображения -->
             <fieldset class="img-upload__start" required>
@@ -206,6 +206,11 @@
         <span class="picture__likes"></span>
       </p>
     </a>
+  </template>
+
+  <!-- Сообщение с ошибкой загрузки изображений с сервера -->
+  <template id="alert">
+    <div class="alert_message" style="position: absolute; background-color: red; left: 0; top: 0; text-align: center; font-size: 20px; padding: 10px 3px; width: 100%;"></div>
   </template>
 
   <!-- Сообщение с ошибкой загрузки изображения -->
